# rust-http-server

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-07-02-153849_initdb/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  routes.rs  schema.rs  utils.rs
src/handlers/: auth.rs  blogs.rs  mod.rs  users.rs
src/models/: blog.rs  mod.rs  users.rs
