[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.0"
bcrypt = "0.12"
uuid = { version = "1.0", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
actix-rt = "2.5"

